--- a/background.html
+++ b/background.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <script src="background.js" type="module"></script>
-    <title>Title</title>
 </head>
 <body>
-
 </body>
 </html>
-
